# Meloetta

./: .gitignore  LICENSE  Pipfile  config-example.yml  config.yaml  config.yml  pm2.yml  pyproject.toml  run.py
.github/workflows/: main.yml
bot/: __init__.py  __main__.py  bot.py  config.py  context.py  help.py  logging.py
bot/cogs/: psychic.py  rng.py
bot/cogs/core/: admin.py  git.py  status.py
bot/cogs/player/: __init__.py  db.py  queue.py  session.py  track.py
bot/utils/: checks.py  converters.py  paginator.py  tools.py
bot/utils/tools/: message.py  string.py
cogs/core/: about.py
cogs/player/: __init__.py  player.py  utils.py
utils/: abc.py  paginator.py  webhooks.py
