[tool.poetry]
name = "meloetta"
version = "0.1.0"
description = "Bot for the r/Pokemon discord server."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.7.2"
pyyaml = "^5.3.1"
# wavelink = "^1.0.0"
uvloop = {version = "^0.14.0", platform = "linux"}
python-dotenv = "^0.14.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py", rev = "voice-protocol"}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
mutagen = "^1.45.1"
wavelink = {git = "https://github.com/bijij/wavelink", rev = "rewrite-Node-only"}
# wavelink = {path = "../../Wavelink"}

donphan = "^2.3.1"
[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
